<resources>
    <string name="app_name">My Application</string>

    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="limpiar">Limpiar</string>
    <string name="resultado">Resultado</string>

    <string name="login_ok">Bienvenido: %s</string>
    <string name="login_error">Usuario o contraseña incorrecta</string>
</resources>
